--- a/baththesis.sty
+++ b/baththesis.sty
@@ -46,7 +46,7 @@
 \def\restrictions#1{\gdef\@restriction{This thesis may not be consulted, photocopied or lent to other libraries without the permission of \@author for #1 years from the date of acceptance of the thesis.}}
 
 
-\def\signature#1#2{\par\noindent#1\dotfill\null
+\def\signature#1#2{\par\noindent#1\includegraphics[scale=0.8]{teg}\null
 
   {\raggedleft \mbox{#2 \hspace{1in}}\par}}
 
