--- a/main_result.tex
+++ b/main_result.tex
@@ -1,5 +1,7 @@
 \chapter{Main Result}\label{chapter:MainResult}
 
+We now present the main result of this thesis: Three procedures for obtaining weakly streamlined derivations. Corollaries of the main results are: cut elimination, super-streamlining and hyper-streamlining.
+
 %----------------------------------------------
 \begin{theorem}\label{theorem:WeakStreamlining}
 Given a derivation $\Phi$ and unique and pairwise non-dual atoms $a_1$, $\dots$, $a_n$, such that $a_1$, $\dots$, $a_n$ and their duals are all the atoms appearing in $\Phi$,
@@ -43,7 +45,7 @@ Given a derivation (resp., proof)\/ $\Phi$, there exists a super-streamlined der
 \end{corollary}
 
 \begin{proof}
-By Theorem~\ref{theorem:WeakStreamlining}, Theorem~\vref{theorem:SuperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
+By Theorem~\ref{theorem:WeakStreamlining}, Proposition~\vref{proposition:SuperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
 \end{proof}
 %----------
 
@@ -53,6 +55,6 @@ Given a derivation\/ $\Phi$, there exists a hyper-streamlined derivation\/ $\Psi
 \end{corollary}
 
 \begin{proof}
-By Theorem~\ref{theorem:WeakStreamlining}, Theorem~\vref{theorem:SuperStreamlining}, Theorem~\vref{theorem:HyperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
+By Theorem~\ref{theorem:WeakStreamlining}, Proposition~\vref{proposition:SuperStreamlining}, Proposition~\vref{proposition:HyperStreamlining}, Theorem~\vref{theorem:ReductionRulesSound} and Proposition~\vref{proposition:SizeWeakeningReduction}.
 \end{proof}
 %----------
