--- a/thesis.tex
+++ b/thesis.tex
@@ -5,6 +5,7 @@
 
 \usepackage{makeidx}
 \makeindex
+\usepackage{graphicx}
 \usepackage{fancyhdr}
 \usepackage{amsmath,amsthm}
 \usepackage{varioref}
@@ -129,7 +130,7 @@
 \input{local_reductions.tex}
 \input{main_result.tex}
 %\part{Conclusions}
-\input{conclusions.tex}
+%\input{conclusions.tex}
 \printindex
 %\part{Appendices}
 %\appendix
