--- a/formalism.tex
+++ b/formalism.tex
@@ -4,9 +4,9 @@ The traditional formalism in deep inference is \emph{the calculus of structures}
 
 \TODO{Few words of caution about Formalism A note.}
 
-The idea of a new formalism, named \emph{formalism A} based on the calculus of structures, but where derivations contain less redundant information, was proposed by Guglielmi in \cite{Gugl:04:Formalis:am}, and later Br\"{u}nnler and Lengrand developed a term calculus around these ideas \cite{BrunLeng:05:On-Two-F:jf}.
+The idea of a new formalism, named \emph{formalism A} based on the calculus of structures, but where derivations contain less bureaucracy, was proposed by Guglielmi in \cite{Gugl:04:Formalis:am}, and later Br\"{u}nnler and Lengrand developed a term calculus around these ideas \cite{BrunLeng:05:On-Two-F:jf}.
 
-In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of redundant information greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\ref{subsection:ThresholdFormulae}).
+In this chapter I define a formalism based on the ideas of formalism A and call it (as suggested by Fran\c{c}ois Lamarche) \emph{the functorial calculus}. The reason to introduce a new formalism is that its lack of bureaucracy greatly simplifies the presentation of some of the more technical results in this thesis (in particular Section~\ref{subsection:ThresholdFormulae}).
 
 After presenting the functorial calculus we compare it briefly with the calculus of structures before we introduce the standard deductive system for classical logic in deep inference and show some preliminary results.
 
@@ -110,6 +110,9 @@ Given a deductive system $\mathcal S$, and formulae $\alpha$ and $\beta$; a (\em
  \]
  where $\vlder{\Phi_1}{}{\beta_1}{\alpha_1}$ and $\vlder{\Phi_2}{}{\beta_2}{\alpha_2}$ are derivations, and  $\alpha\equiv\vls[\alpha_1.\alpha_2]$ and $\beta\equiv\vls[\beta_1.\beta_2]$, or $\alpha\equiv\vls(\alpha_1.\alpha_2)$ and $\beta\equiv\vls(\beta_1.\beta_2)$, respectively.
 \end{enumerate}
+
+A derivation with premiss $\ttt$ is, from now on, called a \emph{proof}.
+
 The size of a derivation $\Psi$, denoted $\size{\Psi}$, is defined to be the sum of the size of the formulae appearing in $\Psi$.
 \end{definition}
 %---------------
