--- a/local_reductions.tex
+++ b/local_reductions.tex
@@ -200,7 +200,7 @@ An (\emph{atomic-flow}) \emph{reduction rule $r$ from flow $\phi'$ to flow $\psi
 \item $g$ is a one-to-one map from the lower edges of $\phi'$ to the lower edges of $\psi'$,
 \item for every polarity assignment $\pi$ for $\phi'$, there is a polarity assignment $\pi'$ for $\psi'$ such that $\pi'(f(\epsilon))=\pi(\epsilon)$ and $\pi'(g(\epsilon'))=\pi(\epsilon')$, for any upper edge $\epsilon$ and any lower edge $\epsilon'$ of $\phi'$;
 \end{enumerate}
-we define reduction rules with graphical expressions $r\colon\phi'\to\psi'$, where $f$ and $g$ are indicated by labelling edges. For every reduction rule $r\colon\phi'\to\psi'$, the reduction ${\to_r}$ is defined, such that $\phi\to_r\psi$ if and only if $\phi'$ appears as a subgraph in $\phi$ and we obtain $\psi$ by replacing $\phi'$ with $\psi'$ in $\phi$, while respecting the correspondence of edges; we call this operation a \emph{reduction by $r$}\index{reduction!by rule}.
+we define reduction rules with graphical expressions $r\colon\phi'\to\psi'$, where $f$ and $g$ are indicated by labelling edges. For every reduction rule $r\colon\phi'\to\psi'$, the reduction ${\to_r}$ is defined, such that $\phi\to_r\psi$ if and only if $\phi'$ appears as a subflow in $\phi$ and we obtain $\psi$ by replacing $\phi'$ with $\psi'$ in $\phi$, while respecting the correspondence of edges; we call this operation a \emph{reduction by $r$}\index{reduction!by rule}.
 \end{definition}
 
 \begin{remark}\label{remark:FlowReductionRuleProperFlow}
@@ -277,19 +277,27 @@ The following flow rewriting system is called $\frc$:
 \]
 \end{definition}
 
-\TODO{Alessio: do these things need proofs? Should I call them propositions?}
+Maximal $\ai$-paths provide for a measure when dealing with the termination of $\frc$.
 
-%----------------------------------------------
-\begin{theorem}\label{theorem:SuperStreamlining}
+%----------------------------
+\begin{remark}\label{remark:Rank}
+A simple inspection to the reduction rules of $\frc$ convinces us that reducing by $\frc$ does not change the number and length of the maximal $\ai$-paths of a flow. The same holds for the maximal $\ai$-paths to or from vertices that are not involved in a given reduction.
+\end{remark}
+%-----------
+
+We now state two propositions whose proofs are immediate from the appropriate definitions:
+
+%-------------------------------------------------------
+\begin{proposition}\label{proposition:SuperStreamlining}
 Given a weakly-streamlined atomic flow $\phi$, if $\phi\to_\frw^\star\psi$ and $\psi$ is normal for $\frw$, then $\psi$ is super streamlined.
-\end{theorem}
-%------------
+\end{proposition}
+%----------------
 
-%----------------------------------------------
-\begin{theorem}\label{theorem:HyperStreamlining}
+%-------------------------------------------------------
+\begin{proposition}\label{proposition:HyperStreamlining}
 Given a super-streamlined atomic flow $\phi$, if $\phi\to_\frc^\star\psi$ and $\psi$ is normal for $\frc$, then $\psi$ is hyper streamlined.
-\end{theorem}
-%------------
+\end{proposition}
+%----------------
 
 
 %===========================================
@@ -300,7 +308,7 @@ Given a super-streamlined atomic flow $\phi$, if $\phi\to_\frc^\star\psi$ and $\
 A reduction rule $r$ is \emph{sound}\index{reduction!rule!sound} if $\to_r$ is sound.
 \end{definition}
 
-The proof of the following theorem is essentially contained in Figures~\vref{figure:ReductionRulesWeakening} and \vref{figure:ReductionRulesContraction}.
+The proof of the following theorem is essentially contained in Figures~\ref{figure:ReductionRulesWeakening} and \ref{figure:ReductionRulesContraction}.
 
 %---------------------------------------
 \begin{figure}[tbp]
@@ -614,7 +622,7 @@ Flow rewriting system\/ $\frc$ is terminating on the set of cycle-free atomic fl
 
 \newcommand{\rk}{{\mathsf r}}
 \begin{proof}
-Let $\phi$ be a cycle-free flow. We associate to each contraction (resp., cocontraction) vertex $\nu$ its \emph{rank} $\rk_\nu=\sum_{p_i\in I_\nu}h_i$, where $I_\nu$ is the set of all maximal $\ai$-paths $p_i=\epsilon^i_1,\dots,\epsilon^i_{h_i}$ from $\nu$, such that $\epsilon^i_1$ is the lower (resp., upper) edge of $\nu$ (so, the rank of a vertex is the sum of the lengths of certain maximal $\ai$-paths from it). Note that every (co)contraction vertex has non-zero rank. We prove that a reduction of $\phi$ by $\frc$ decreases the sum of the ranks of the (co)contraction vertices of $\phi$. First note that the rank of the vertices not involved in the reduction step stays the same (see Remark~\ref{RemRank}). We then need to show that the sum of the ranks decreases for the vertices involved. There are three cases, depending on the reduction rule:
+Let $\phi$ be a cycle-free flow. We associate to each contraction (resp., cocontraction) vertex $\nu$ its \emph{rank} $\rk_\nu=\sum_{p_i\in I_\nu}h_i$, where $I_\nu$ is the set of all maximal $\ai$-paths $p_i=\epsilon^i_1,\dots,\epsilon^i_{h_i}$ from $\nu$, such that $\epsilon^i_1$ is the lower (resp., upper) edge of $\nu$ (so, the rank of a vertex is the sum of the lengths of certain maximal $\ai$-paths from it). Note that every (co)contraction vertex has non-zero rank. We prove that a reduction of $\phi$ by $\frc$ decreases the sum of the ranks of the (co)contraction vertices of $\phi$. First note that the rank of the vertices not involved in the reduction step stays the same (see Remark~\vref{remark:Rank}). We then need to show that the sum of the ranks decreases for the vertices involved. There are three cases, depending on the reduction rule:
 \begin{itemize}
 %
 \item[$\rcdiu$:]a contraction vertex $\nu$ is replaced by a cocontraction vertex $\nu'$, and $\rk_{\nu'}=\rk_\nu-n$, where $n>0$ is the number of maximal $\ai$-paths from $\nu$ whose first edge is the lower edge of $\nu$;
@@ -636,11 +644,6 @@ It is straightforward to verify the statement by checking each critical pair of 
 \end{proof}
 %----------
 
-%=======================================
-\section{Conservation of Paths}\label{section:FlowRewritePathConservation}
-
-\TODO{Show that the number and length of `super paths' are conserved by all reduction rules. Or some remark to this effect... Not important...}
-
 %========================================
 \section{Complexity}\label{section:FlowRewriteComplexity}
 
@@ -650,7 +653,7 @@ Given a derivation $\Phi$, there exists a derivation $\Psi$, such that $\Phi\to_
 \end{proposition}
 
 \begin{proof}
-The number of reductions used to arrive at $\Psi$ is bound by the number of edges in the atomic flow of $\Phi$, so by the size of $\Phi$. Furthermore, each reductions shown in Figure~vref{figure:ReductionRulesWeakening} grow the derivation by at most a constant. Hence, the size of $\Psi$ depends at most linearly on the size of $\Phi$.
+The number of reductions used to arrive at $\Psi$ is bound by the number of edges in the atomic flow of $\Phi$, so by the size of $\Phi$. Furthermore, each reductions shown in Figure~\vref{figure:ReductionRulesWeakening} grows the derivation by at most a constant. Hence, the size of $\Psi$ depends at most linearly on the size of $\Phi$.
 \end{proof}
 %----------
 
@@ -678,6 +681,6 @@ Normalising by $\frc$ can blow the size of atomic flows exponentially, in partic
 ( 4,10  )*{\afacdnw{}{}{}{}{}{}}}
 \quad.
 \]
-In fact, if there are $n$ couples of cocontraction/contraction vertices like the two shown above on the left, then there are $2^n$ maximal $\ai$-paths, and their number (and length) is conserved by $\to_\frc^\star$ (see Remark~\vref{remark:TODO}). Exactly one $\ai$-path passes through each edge in the middle portion of the flow on the right. It follows that normalising derivations by $\frc$ can also blow their size exponentially.
+In fact, if there are $n$ couples of cocontraction/contraction vertices like the two shown above on the left, then there are $2^n$ maximal $\ai$-paths, and their number (and length) is conserved by $\to_\frc^\star$ (see Remark~\vref{remark:Rank}). Exactly one $\ai$-path passes through each edge in the middle portion of the flow on the right. It follows that normalising derivations by $\frc$ can also blow their size exponentially.
 \end{remark}
 %-----------
